--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,7 @@
 .App-link {
   color: #61dafb;
 }
+
+.dropShadow {
+  box-shadow: 0 0.46875rem 2.1875rem rgba(90,97,105,.1), 0 0.9375rem 1.40625rem rgba(90,97,105,.1), 0 0.25rem 0.53125rem rgba(90,97,105,.12), 0 0.125rem 0.1875rem rgba(90,97,105,.1);
+}
