--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'GoodTime';
+  src: local('GoodTime'), url(./fonts/goodTime.ttf) format('truetype');
+}
+
 .App {
   text-align: center;
 }
